added soft skills & languages

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
           <p>As an Architect & Artist I aspire to exploratively use the mediums of design and the act of building through conscious means to enhance the everyday experience of the people inhabiting those spaces. I enjoy challenging briefs, intricate design process and an experimental approach towards designing.</p>
           </br>
 
-          <p>I am creative, passionate, detail oriented with interests spanning from urban design, sustainability, contemporary style, research and documentation to graphic design, and art direction. I am looking forward to being a part of an environment where I can put my creativity and experience to its best use, as well as sharpen my skills and grasp new ones along the learning process.
-.</p>
+          <p>I am creative, passionate, detail oriented with interests spanning from urban design, sustainability, contemporary style, research and documentation to graphic design, and art direction. I am looking forward to being a part of an environment where I can put my creativity and experience to its best use, as well as sharpen my skills and grasp new ones along the learning process.</p>
         </div>
 
         <div class="row">
@@ -184,7 +183,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2>Technical Skills</h2>
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div> -->
 
@@ -261,7 +260,7 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ======= Resume Section ======= -->
+    <!-- ======= Work Experience Section ======= -->
     <section id="experience" class="resume">
       <div class="container">
 
@@ -327,16 +326,16 @@
         </div>
 
       </div>
-    </section><!-- End Resume Section -->
+    </section><!-- End Work Experience Section -->
 
     <!-- ======= Education Section ======= -->
-    <section id="education" class="resume">
+    <section id="education" class="resume section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Education</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div> -->
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
 
         <div class="row">
           <div class="col-lg-8" data-aos="fade-up">
@@ -358,6 +357,46 @@
       </div>
     </section><!-- End Education Section -->
 
+
+    <!-- ======= Soft Skills & Language Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Soft Skills & Languages</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+            <div class="resume-item pb-0">
+              <h4>Soft Skills</h4>
+              <ul>
+                <li>Critical Thinking</li>
+                <li>Project Coordination and Management</li>
+                <li>Communication</li>
+                <li>Teamwork</li>
+                <li>Leadership</li>
+                <li>Adaptability</li>
+                <li>Versatility</li>
+              </ul>
+            </div>
+
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="resume-item">
+            <h4>Languages</h4>
+              <ul>
+                <li>English</li>
+                <li>Kannada</li>
+                <li>Hindi</li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- Soft Skills & Language Section -->
 
 
     <!-- ======= Portfolio Section ======= -->
