added freelance projects

--- a/index.html
+++ b/index.html
@@ -322,6 +322,32 @@
               </ul>
             </div>
 
+            <div class="resume-item">
+              <h4>Freelance Architect & Artist</h4>
+              <h3>Siddhi Architects</h3>
+              <p><em>Bengaluru, Karnataka, India</em></p>
+              <h5>December 2019 - October 2020</h5>
+
+              <p class="scope-of-work"><b>Design:</b></p>
+              <ul>
+                <li>Redesigning parking lot, open spaces into defined landscape, bar counter, meditation space.</li>
+                <li>Redesigning of entrance gate and compound wall.</li>
+                <li>Renovation of garage space into a bakery store.</li>
+                <li>Schematic plans - 2bhk, 3bhk.</li>
+                <li>Interior workstation renovation - contemporary style.</li>
+              </ul>
+
+              <p class="scope-of-work"><b>Art:</b></p>
+              <ul>
+                <li>Wall art for science center & fine dining space.</li>
+                <li>Caricatures</li>
+                <li>Personalized gifts</li>
+                <li>Up-cycled art and recycled craft products.</li>
+                <li>Book cover design, bookmarks, logo design, printable stickers.</li>
+              </ul>
+
+            </div>
+
           </div>
         </div>
 
