modified the work experience content, & added relevant website links.

--- a/index.html
+++ b/index.html
@@ -266,7 +266,6 @@
 
         <div class="section-title">
           <h2>Work Experience</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div> 
 
         <div class="row">
@@ -277,54 +276,20 @@
               <h3>KK & GL Associates</h3>
               <p><em>BSK 3rd stage, Bengaluru, Karnataka, India</em></p>
               <h5>November 2020 - November 2021</h5>
-              <p class="firm-intro"><b>Firm intro:</b> Focused on mixed projects of varying scales and types.</p>
+              <p class="firm-intro"><b>Firm Intro:</b> Lead by principal architects Santhosh Garudanagiri and Krishna Kumar. The firm is known for transforming basic brick and mortar into extraordinary spaces. They professionally enterprise visualizes, ideates and implement residential, commercial and/or industrial projects that redefine a particular area's architectural landscape at large. It has the know-how to cater to a diverse set of industries spanning hospitality, education, healthcare, IT, retail,turn-keyprojects.</p>
               <p class="firm-projects"><b>Type of Projects:</b> Apartments, Showrooms, Residents, Renovation Projects, Commercial, Cafe and Restaurants, Ayurvedic Colleges and Hospitals research, Destination Wedding, cooperative bank.<p>
               <p class="scope-of-work"><b>Scope of Work:</b> </p>
               <ul>
                 <li>Participated in all stages of design and construction processes on 8-10 projects.</li>
-                <li>Managed up to 3 - 5 projects or tasks at a given time while under pressure.</li>
-                <li>Lead in the design, development and implementation of the design  through client,vendor meetings, materials selection.</li>
                 <li>Involved in developing schematic plans,3-D Models, Renders and Interior Design Details.</li>
                 <li>Conducted Site Visits and Co-ordination on Design with structural and other consultants.</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>Intern and Junior Architect</h4>
-              <h3>Spacio Architects</h3>
-              <p><em>Jayanagar, Bengaluru, Karnataka, India</em></p>
-              <h5>January 2019 - June 2019, July 2019- December 2019</h5>
-              <p class="firm-intro"><b>Firm intro:</b> Focused on mixed projects such as apartments, residences and commercial spaces which provided a better outlook towards designing and structural details.</p>
-              <p class="firm-projects"><b>Type of Projects:</b> Mixed Group, Community Development, Schools, Apartments, Residents, Commercial.<p>
-              <p class="scope-of-work"><b>Scope of Work:</b> </p>
-              <ul>
-                <li>Working Drawings.</li>
-                <li>Schematic Design Developments and Presentations.</li>
-                <li>Conceptual Design Mock-ups and Client Interaction.</li>
-                <li>Detail Construction Drawing.</li>
-                <li>Planning, Zoning and Design (developmental stages).</li>
-              </ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>Intern</h4>
-              <h3>Siddhi Architects</h3>
-              <p><em>JP Nagar, Bengaluru, Karnataka, India</em></p>
-              <h5>November 2020 - November 2021</h5>
-              <p class="firm-intro"><b>Firm intro:</b> Focused on residential projects where I got the exposure towards working drawings and details of Interior.</p>
-              <p class="firm-projects"><b>Type of Projects:</b> Residential, Layout Development, Villas.<p>
-              <p class="scope-of-work"><b>Scope of Work:</b> </p>
-              <ul>
-                <li>Working Drawings.</li>
-                <li>Structural Details.</li>
-                <li>Conceptual Design Mock-ups.</li>
-                <li>Detail Construction Drawing.</li>
+                <li>Managed 3-5 projects / tasks at a given time while under pressure.</li>
+                <li>Lead the design,development,implementation and material selection stages of building.</li>
               </ul>
             </div>
 
             <div class="resume-item">
               <h4>Freelance Architect & Artist</h4>
-              <h3>Siddhi Architects</h3>
               <p><em>Bengaluru, Karnataka, India</em></p>
               <h5>December 2019 - October 2020</h5>
 
@@ -348,6 +313,39 @@
 
             </div>
 
+            <div class="resume-item">
+              <h4>Intern and Junior Architect</h4>
+              <h3>Spacio Architects</h3>
+              <p><em>Jayanagar, Bengaluru, Karnataka, India</em></p>
+              <h5>January 2019 - June 2019, July 2019 - December 2019</h5>
+              <p><a href="https://spacioarchitects.in/">Spacio Architects Website</a></p>
+              <p class="firm-intro"><b>Firm Intro:</b> SPACIO ARCHITECTS is a multidisciplinary architecture structure interior and landscape planning firm in Bangalore, founded in 2018. The firm works in multiple scales and with various organizations right from individual clients to corporate and NGOs. This allows them to experiment and diversify work on different platforms.</p>
+              <p class="firm-projects"><b>Type of Projects:</b> Luxury Villas, High End Residences and Unique Office Spaces as well as Hospitality, Commercial, and Educational Institutions.<p>
+              <p class="scope-of-work"><b>Scope of Work:</b> </p>
+              <ul>
+                <li>Schematic Design Developments and Presentations.</li>
+                <li>Facilitated Conceptual Design Mock-ups and observer of Client Interactive sessions.</li>
+                <li>Involved in coordination and inter-sector discussion on design process, critical thinking and workflow.</li>
+                <li>Involved in Planning, Zoning and Design of micro & macro details.</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Intern</h4>
+              <h3>Siddhi Architects</h3>
+              <p><em>JP Nagar, Bengaluru, Karnataka, India</em></p>
+              <h5>July 2018 - December 2018</h5>
+              <p class="firm-intro"><b>Firm Intro:</b> Proprietor firm focused on Residential Architecture Designing.</p>
+              <p class="firm-projects"><b>Type of Projects:</b> Residential, Layout Development, Villas.<p>
+              <p class="scope-of-work"><b>Scope of Work:</b> </p>
+              <ul>
+                <li>Training in a set of working drawings and design development process.</li>
+                <li>Part plan,modeling of micro design options, translation of requirements into functional plans.</li>
+                <li>Trained to work & coordinate detail set of drawings, MOM and project management and aid assistance.</li>
+                <li>Assigned to Site visits, building study, material study and its implications in design decisions.</li>
+              </ul>
+            </div>
+
           </div>
         </div>
 
@@ -360,23 +358,16 @@
 
         <div class="section-title">
           <h2>Education</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
           <div class="col-lg-8" data-aos="fade-up">
-            <!-- <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div> -->
             <div class="resume-item">
               <h4>Bachelor's in Architecture (B.Arch)</h4>
               <h5>2014 - 2019</h5>
-              <p><h3>Impact School of Architecture</h3></p> 
-              <a href="">Visvesvaraya Technological University (VTU)</a>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p><h3>Impact School of Architecture</h3><a href="https://impact.ac.in/wp_isab/">Website</a></p>
+              <p><i>from the prestigious</i></p>
+              <p><h3>Visvesvaraya Technological University (VTU)</h3><a href="https://vtu.ac.in/">Website</a></p>
             </div>
           </div>
 
