added workshops, events & online courses

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Education</h2>
+          <h2>Education & Online Courses</h2>
         </div>
 
         <div class="row">
@@ -369,6 +369,27 @@
               <p><h3>Visvesvaraya Technological University (VTU)</h3><a href="https://vtu.ac.in/">Website</a></p>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>Architectural Imagination by Harvard University, edx open course</h4>
+              <h5>2014 - 2019</h5>
+              <p><a href="https://www.edx.org/course/the-architectural-imagination">Coursework</a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>Sustainable Architecture, IIT Roorkee, NPTEL open course</h4>
+              <h5>2014 - 2019</h5>
+              <p><a href="https://nptel.ac.in/courses/124/107/124107011/">Coursework</a></p>
+            </div>
+          </div>
+        </div>
 
       </div>
     </section><!-- End Education Section -->
@@ -531,6 +552,71 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+
+    <!-- ======= Workshops & Events Section ======= -->
+    <section id="education" class="resume section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Workshops & Events</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>Designuru by IIID at Rangolio art gallery</h4>
+              <h5>Oct 2022</h5>
+              <p><a href="https://www.facebook.com/DesignuruBlr/" target="_blank">Website</a></p>
+              <p>The festival aims in creating a dialogue among the residents of the city through the lens of community and public interest based works on Design, Art and Architecture.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>Gendering the smart city by DesignBeku, at BIC</h4>
+              <h5>December 2019</h5>
+              <p><a href="https://designbeku.in/gendering-the-smart-city-ayona-datta-ucl/" target="_blank">Website</a></p>
+              <p>Envisioning inclusive alternatives to smart cities by mapping urban issues and solving via participatory and co-design activities through interdisciplinary field representatives.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>Bangalore Literature Festival, 9th edition at Neev academy</h4>
+              <h5>Oct 2019</h5>
+              <p><a href="https://lbb.in/bangalore/neev-literature-festival-2019/" target="_blank">Website</a></p>
+              <p>The art of storytelling and narration through visual expressions by Illustrators like Paul, Alice de souza.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>Inclusive learning and field tour by Prof.Meghal, at CEPT</h4>
+              <h5>March 2016</h5>
+              <p>Hands on sketching, thesis reviews and design approach.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="resume-item">
+              <h4>LAURIE BAKER: Life, Works and Writings by GAUTAM BHATIA - Book launch and discussion at Inform</h4>
+              <h5>May 2015</h5>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Workshops & Events Section -->
+
 
     <!-- ======= Services Section ======= -->
 <!--    <section id="services" class="services">
