--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <li><a href="#experience" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Work Experience</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#workshops_events" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Workshops & Events</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>   -->
         </ul>
@@ -555,7 +556,7 @@
 
 
     <!-- ======= Workshops & Events Section ======= -->
-    <section id="education" class="resume section-bg">
+    <section id="workshops_events" class="resume section-bg">
       <div class="container">
 
         <div class="section-title">
