--- a/portfolio-project-6.html
+++ b/portfolio-project-6.html
@@ -62,6 +62,7 @@
           <li><a href="index.html#experience" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Work Experience</span></a></li>
           <li><a href="index.html#education" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Education</span></a></li>
           <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="index.html#workshops_events" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Workshops & Events</span></a></li>
           <!-- <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
