changed profile picture and hero background image"

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -86,24 +86,24 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>As an Architect & Artist I aspire to exploratively use the mediums of design and the act of building through conscious means to enhance the everyday experience of the people inhabiting those spaces. I enjoy challenging briefs, intricate design process and an experimental approach towards designing.</p>
+          <p>As an Architect, I passionately aspire to explore not only peculiar structures, but also of the design of everyday life. I hope to further apply my skills as an architect, and my knowledge as a designer to sustainably improve standards of living.</p>
           </br>
 
-          <p>I am creative, passionate, detail oriented with interests spanning from urban design, sustainability, contemporary style, research and documentation to graphic design, and art direction. I am looking forward to being a part of an environment where I can put my creativity and experience to its best use, as well as sharpen my skills and grasp new ones along the learning process.</p>
+          <p>I am a creative, zealous, detail oriented Architect with interests spanning from urban design and sustainability to contemporary style, research and documentation to graphic design. In general, always happy to learn.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/bru_profile.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Arhictect | Designer | Artist</h3>
+          <div class="col-lg-8 pt-2 pt-lg-0 content" data-aos="fade-left">
+            <h3>Architect | Designer | Artist</h3>
             <!--<p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
             </p> -->
             <div class="row profile">
-              <div class="col-lg-6">
+              <div class="col-lg-7">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28th July 1996</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li> -->
@@ -111,7 +111,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-7">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Architect (B.Arch)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:brundamuralidhar@gmail.com">brundamuralidhar@gmail.com</a></li>
